tests/baselines/reference/parserVariableStatement1.d.errors.txt
==== tests/cases/compiler/parserVariableStatement1.d.ts (1 errors) ====
    var v = 1;
    ~~~
!!! parserVariableStatement1.d.ts(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.